--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -10,9 +10,18 @@ body{
     height:100%;
 }
 
+.custom-form{
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    width:400px;
+    max-width:100%;
+}
+
 .credentials-bg {
     background: url("/images/credentials_bg.png") no-repeat; 
     background-size: cover;
     width: 100%;
     height: 100%;
-  }
+}
