--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -20,8 +20,12 @@ body{
 }
 
 .credentials-bg {
+    position:fixed;
     background: url("/images/credentials_bg.png") no-repeat; 
     background-size: cover;
     width: 100%;
     height: 100%;
+    -webkit-filter: blur(4px);
+    filter: blur(4px);
+    transform:scale(1.2);
 }
