modifying scrolbar in chrome

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,8 +1,12 @@
+@import "./scss/mixins";
+@import "./scss/scrollbar";
+
 body{
     margin:0px;
     padding:0px;
     height:100vh;
     width:100vw;
+    overflow:hidden;
 }
 
 #app{
@@ -11,10 +15,7 @@ body{
 }
 
 .custom-form{
-    position: absolute;
-    left:50%;
-    top:50%;
-    transform: translate(-50%,-50%);
+    @include absolute-center ;
     width:400px;
     max-width:100%;
 }
@@ -30,21 +31,16 @@ body{
     transform:scale(1.2);
 }
 
-.parent-flex, .parent-flex * {
-    display:flex;
-    flex-direction:column;
-    min-height:0;
-    height:100%;
+.parent-flex ,.parent-flex>.row>[class*='col-']{
+    @include parent-flex;
 }
 
-.stop-parent-flex, .stop-parent-flex *,.child-flex *{
-    display:unset;
-    min-height:unset;
-    flex-direction:unset;
-    height:unset;
+.parent-flex>.row {
+    @include parent-flex();
+    flex-direction:row;
 }
 
 .child-flex{
-    flex:1;
-    overflow-y:auto;
+    flex:1 !important;
+    overflow-y:auto !important;
 }
